@@ -1,3 +1,5 @@
+ * Fixed TLS-ALPN-01 challenges when multiple `MDPrivateKeys` are specified
+   with EC keys before RSA ones. Fixes #377.
  * Fixed missing newlines in the status page output. [andreasgroth]
 
 v2.5.1
